--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.firebase.androidchat.ChatApplication"
+        android:name=".ChatApplication"
         android:allowBackup="true"
         android:icon="@drawable/firebase_logo"
         android:label="@string/app_name"
@@ -19,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login">
+        </activity>
+
     </application>
 
 </manifest>
