--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,13 @@ allprojects {
     repositories {
         jcenter()
     }
+    // 実行フェーズ開始前
+    gradle.projectsEvaluated {
+        // options.encoding = 'UTF-8'とかもこのちゅうかっこの中で指定できる
+        tasks.withType(JavaCompile) {
+            // オプション指定．uncheckedは未チェックなもの(*1)，deprecationは非推奨なものを表示する
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
+
 }
